tests/baselines/reference/objectTypesWithOptionalProperties.errors.txt
==== tests/cases/conformance/types/objectTypeLiteral/methodSignatures/objectTypesWithOptionalProperties.ts (4 errors) ====
    // Basic uses of optional properties
    
    var a: {
        x?: number; // ok
    }
    
    interface I {
        x?: number; // ok
    }
    
    class C {
        x?: number; // error
         ~
!!! error TS1112: A class member cannot be declared optional.
    }
    
    interface I2<T> {
        x?: T; // ok
    }
    
    class C2<T> {
        x?: T; // error
         ~
!!! error TS1112: A class member cannot be declared optional.
    }
    
    var b = {
        x?: 1 // error
         ~
!!! error TS1005: ':' expected.
          ~
!!! error TS1109: Expression expected.
    }